--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= conatuc (CO-"NATUral language" Converter): A natural language converter
+= conatuc (COnatuc: NATUral language Converter): A natural language converter
 
 == How to build
 
@@ -7,3 +7,7 @@
 == Warning
 
 This is an experimental project.
+
+== Pronounce
+
+こなちゅしー or こなつしー
